syntax = "proto3";

package pb;

message Location {
    string address = 1;
    string city = 2;
    string zip_code = 3;
    float latitude = 4;
    float longitude = 5;
}